G1+G2: per-source-set javac options -- a reactor has no single release, and per set it has one
The global InputConfiguration.sourceRelease states one answer for the whole
configuration, so CompileListToInputConfiguration ABSTAINS when a corpus states
several -- deliberately, and for a good reason it writes down: picking the maximum
hides an API removed after it from the module that still uses it, picking the
minimum invents compile errors in the module that does not. OpenSearch states
three (44 sets at 21, buildSrc/reaper at 11, libs/common at 8), so it abstained,
the parse fell back to the JDK it runs on, and Thread.suspend() at release 21
read as "cannot find symbol" -- dropped unit, refused ParseResult. The campaign
hand-set a global 21 and recorded it as "an accepted, recorded approximation".

Per SET there is no ambiguity to abstain from: the set was compiled with exactly
these options. SourceSet gains sourceRelease() and addModules(); the scrape fills
them from each CompileInvocation; JavaInspectorImpl prefers the set's own over
the global. That loop ALREADY ran one javac task per source set with the set in
hand, so only the value had to change.

--add-modules was not captured at all: Javac now parses it (VALUED, or the module
name is read as a source FILE -- the flag lost AND a bogus compilation unit
added). One OpenSearch set needs jdk.incubator.vector and the other 46 must not.

⚠ SCOPE, deliberate: this governs javac ATTRIBUTION only. Platform types stay
recorded once per FQN for the whole parse, so a JDK type has ONE shape however
many releases the sets state. The alternative -- accumulating the union across
sets -- would keep every JDK type uncommitted until the last source set, which
inverts the commit discipline (TypeInfoImpl.builder() asserts isVariable()) on the
most widely shared types there are. Whether that one shape costs anything real is
a MEASUREMENT, not an argument, and it is the next commit.

Tests. The end-to-end one did not exist: nothing 